[ADD] funds transfering endpoint
